[package]
name = "video_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
fltk = { version = "1.4.21", features = ["fltk-bundled"] }
fltk-theme = "0.7.2"
tempfile = "3.9.0"
